﻿== PngOptimizer Changelog ==

-----------------
2020 (2.7-beta)

-----------------
2019-07 (2.6.2)

- fixed: compilation warning with gcc9
- change: new GTK+ interface with header bar
- change: do not overwrite a file if the content stays the same

-----------------
2017-02-12 (2.5.1)

- fixed: window position would be always centered instead of being restored to the previous position (Windows only)
- misc: fixed compilation warnings detected by GCC 6

-----------------
2016-10-09 (2.5)

- misc: update code for GTK+ version
- misc: reorganize Windows code for multiplatform support
- misc: update distrib script to create a .deb package

-----------------
2016-07-24 (2.4.3)

- misc: updated file structure for git first commit

-----------------
2014-06-08 (2.4.2)

- fixed: x64 build failed to open dialog boxes on Windows 8

-----------------
2014-05-25 (2.4.1)

- fixed: Windows XP compatibility for 32 bits build

-----------------
2014-05-18 (2.4)

- misc: updated source code for Visual Studio 2012
- misc: welcome message is centered and appears only when the log window is empty
- fixed: some errors found with VS2012 static analysis tool
- fixed: small UI problem in the screenshots dialog
- change: removed batch summary for single file

-----------------
2013-04-14 (2.3)

- new: multithreaded optimization for faster processing on multicore CPUs
- new: better optimization in some cases of greyscale images

- misc: updated ZLib 1.2.5 to 1.2.7 (compression library)

-----------------
2012-09-09 (2.2)

- new: support of the ".apng" file extension
- fixed: only lower case file extensions were managed. The extension case is not relevant anymore.

-----------------
2012-06-09 (2.1)

- new: option to keep or force pixel physical dimensions (pHYs chunk)
- new: better compatibility for old Windows versions (NT based)
- new: Windows Seven taskbar icon now shows progression of an optimization