@@ -1,7 +1,9 @@
 ﻿== PngOptimizer Changelog ==
 
 -----------------
-2020 (2.7-beta)
+2021 (2.7-beta)
+
+- change: ensure the window is fully visible on Windows
 
 -----------------
 2019-07 (2.6.2)
